tests/programs/invalid/test_transient.java
public class test_transient {
    public transient int x;
}